# pico-audio

docs/: STORAGE_OPTIONS.md
examples/: README.md  WHICH_SD_PLAYER.md
examples/Amplifier/: Amplifier.ino
examples/AudioPrint/: AudioPrint.ino
examples/BasicWaveforms/: BasicWaveforms.ino
examples/BiquadFilter/: BiquadFilter.ino
examples/Bitcrusher/: Bitcrusher.ino
examples/Chorus/: Chorus.ino
examples/DCOffset/: DCOffset.ino
examples/DigitalCombine/: DigitalCombine.ino
examples/Envelope/: Envelope.ino
examples/FFTAnalyzer/: FFTAnalyzer.ino
examples/FIRFilter/: FIRFilter.ino
examples/FadeInOut/: FadeInOut.ino
examples/Flange/: Flange.ino
examples/FlashWavPlayer/: FlashWavPlayer.ino  README.md
examples/Freeverb/: Freeverb.ino
examples/Granular/: Granular.ino
examples/I2SOutputTest/: I2SOutputTest.ino  README.md
examples/KarplusStrong/: KarplusStrong.ino
examples/MidSideProcessing/: MidSideProcessing.ino
examples/Mixer4Channel/: Mixer4Channel.ino
examples/Multiply/: Multiply.ino
examples/NoteFrequency/: NoteFrequency.ino
examples/PWMSynthesis/: PWMSynthesis.ino
examples/PeakDetector/: PeakDetector.ino
examples/PinkNoise/: PinkNoise.ino
examples/PlayQueue/: PlayQueue.ino
examples/PlayQueueTest/: PlayQueueTest.ino  README.md
examples/RMSAnalyzer/: RMSAnalyzer.ino
examples/Rectifier/: Rectifier.ino
examples/Reverb/: Reverb.ino
examples/SDCardDiagnostic/: SDCardDiagnostic.ino
examples/SDCardDiagnosticSPI/: README.md  SDCardDiagnosticSPI.ino
examples/SDCardMP3Player/: README.md  SDCardMP3Player.ino
examples/SDCardMP3PlayerSPI/: README.md  SDCardMP3PlayerSPI.ino
examples/SDCardReadTest/: SDCardReadTest.ino
examples/SDCardSDIODiagnostic/: SDCardSDIODiagnostic.ino
examples/SDCardWavPlayer/: SDCardWavPlayer.ino
examples/SDCardWavPlayerDualCore/: README.md  SDCardWavPlayerDualCore.ino
examples/SDCardWavPlayerDualCore/SDCardWavPlayerDualCore_DEBUG/: SDCardWavPlayerDualCore_DEBUG.ino
examples/SDCardWavPlayerMemory/: SDCardWavPlayerMemory.ino
examples/SDCardWavPlayerOptimized/: README.md  SDCardWavPlayerOptimized.ino
examples/SDCardWavPlayerSDIO/: SDCardWavPlayerSDIO.ino
examples/SDCardWavPlayerSPIOptimized/: SDCardWavPlayerSPIOptimized.ino
examples/SDCardWavPlayerSimple/: SDCardWavPlayerSimple.ino
examples/SDCardWriteTest/: SDCardWriteTest.ino
examples/SimpleDelay/: SimpleDelay.ino
examples/SineWave/: SineWave.ino
examples/SineWaveHires/: SineWaveHires.ino
examples/SineWaveModulated/: SineWaveModulated.ino
examples/StateVariableFilter/: StateVariableFilter.ino
examples/ToneDetector/: ToneDetector.ino
examples/ToneSweep/: ToneSweep.ino
examples/WavFlashPlayer/tools/: convert_all.py  wav2c.py
examples/WaveFolder/: WaveFolder.ino
examples/Waveshaper/: Waveshaper.ino
examples/WhiteNoise/: WhiteNoise.ino
examples/playerSD/: playerSD.ino
examples/simple-tone/: simple-tone.ino
libs for sd/: AudioStream.cpp
mp3-player-native-c/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  README_COMPLETE.md  build.sh
mp3-player-native-c/src/: audio_i2s.c  audio_i2s.h  hw_config.c  hw_config.h  i2s.pio  main.c  mp3_decoder.c  mp3_decoder.h
native-mp3-player/: README.md  SDIO_CONFIG.md  platformio.ini
native-mp3-player/src/: main.cpp
platformio-sdio-wavplayer/: README.md  platformio.ini
platformio-sdio-wavplayer/lib/pico-audio/: AudioOutputI2S.h  AudioStream.h  analyze_fft1024.cpp  analyze_fft1024.h  analyze_fft256.cpp  analyze_fft256.h  analyze_notefreq.cpp  analyze_notefreq.h  analyze_peak.h  analyze_print.h  analyze_rms.h  analyze_tonedetect.h  data_ulaw.c  data_waveforme.c  effect_bitcrusher.h  effect_chorus.h  effect_combine.h  effect_delay.h  effect_envelope.cpp  effect_envelope.h  effect_fade.cpp  effect_fade.h  effect_flange.cpp  effect_flange.h  effect_freeverb.h  effect_granular.h  effect_midside.h  effect_multiply.h  effect_rectifier.h  effect_reverb.cpp  effect_reverb.h  effect_wavefolder.h  effect_waveshaper.h  filter_biquad.h  filter_fir.h  filter_ladder.cpp  filter_ladder.h  filter_variable.h  library.json  mixer.cpp  (+20 more)
platformio-sdio-wavplayer/lib/pico-audio/utility/: dspinst.h
platformio-sdio-wavplayer/src/: main.cpp
src/: pico-audio.h  play_sd_wav.cpp  play_sd_wav.h
tools/: wav_to_progmem.py
